docs: update all

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -59,29 +59,29 @@ LarvixON AI develops a rapid diagnostic system based on AI that analyzes larval 
 - Machine learning – classification models for xenobiotic detection
 - Medical use cases – diagnostic support in near real time
 
-## Main components
+## Technology Stack
+
+### Main components
 
 <CardGrid>
-  <Card title="Backend (Django)" icon="seti:django">
+  <Card title="Backend (Django, Python)">
     Scalable backend with REST API, data management and business logic
   </Card>
-  <Card title="Frontend (Flutter)" icon="seti:flutter">
+  <Card title="Frontend (Flutter)">
     Multi-platform user interface for physicians and lab staff
   </Card>
-  <Card title="ML model (Python)" icon="seti:python">
+  <Card title="ML model (Python)">
     Machine learning algorithms for behavioral pattern analysis
   </Card>
-  <Card title="Simulation (Unity)" icon="seti:unity">
-    Generation of synthetic training data
-  </Card>
+  <Card title="Simulation (Unity)">Generation of synthetic training data</Card>
 </CardGrid>
 
-## Infrastructure
+### Infrastructure
 
 - Wrocław Supercomputing Center (WCSS) – compute for ML
 - PostgreSQL – system database
 - Docker – containerization
-- Microsoft Azure – hosting and cloud services
+- xxx – hosting and cloud services
 - Roboflow – video data annotation
 
 ## Project status
