chore: rename LarvixON AI to LarvixON

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: LarvixON AI - project documentation
+title: LarvixON - project documentation
 description: Rapid plasma toxicity diagnostic system using behavioral analysis of larvae and machine learning algorithms
 ---
 
@@ -11,14 +11,14 @@ import {
   Aside,
 } from "@astrojs/starlight/components";
 
-## Welcome to the LarvixON AI documentation
+## Welcome to the LarvixON documentation
 
 **Wrocław University of Science and Technology**  
 **Faculty of Computer Science and Telecommunications**  
 Program: IST  
 **Team project**
 
-LarvixON AI is an innovative diagnostic solution that uses artificial intelligence to detect xenobiotics in patient plasma by analyzing movement patterns of Galleria mellonella larvae.
+LarvixON is an innovative diagnostic solution that uses artificial intelligence to detect xenobiotics in patient plasma by analyzing movement patterns of Galleria mellonella larvae.
 
 <Aside type="tip">
   The project aims to achieve high sensitivity and specificity of the classifier
@@ -52,7 +52,7 @@ LarvixON AI is an innovative diagnostic solution that uses artificial intelligen
 
 ## About the project
 
-LarvixON AI develops a rapid diagnostic system based on AI that analyzes larval movement patterns to identify characteristic organism responses to toxic substances. The system combines:
+LarvixON develops a rapid diagnostic system based on AI that analyzes larval movement patterns to identify characteristic organism responses to toxic substances. The system combines:
 
 - Scientific research – movement data analysis and behavioral feature extraction
 - Software engineering – diagnostic application with a complete pipeline
