feat: translate project documentation to Polish

--- a/src/content/docs/en/index.mdx
+++ b/src/content/docs/en/index.mdx
@@ -81,7 +81,7 @@ LarvixON develops a rapid diagnostic system based on AI that analyzes larval mov
 - Wrocław Supercomputing Center (WCSS) – compute for ML
 - PostgreSQL – system database
 - Docker – containerization
-- xxx – hosting and cloud services
+- TODO – hosting and cloud services
 - Roboflow – video data annotation
 
 ## Project status
