init: new sidebar item - university documentation

--- a/src/content/docs/en/index.mdx
+++ b/src/content/docs/en/index.mdx
@@ -86,4 +86,4 @@ LarvixON develops a rapid diagnostic system based on AI that analyzes larval mov
 
 ## Project status
 
-The project is currently in phase III: integration and optimization (October 2025). Work is ongoing to connect all system components and optimize ML models with real data.
+The project is currently in phase III: integration and optimization. Work is ongoing to connect all system components and optimize ML models with real data.
