--- a/src/content/docs/pl/index.mdx
+++ b/src/content/docs/pl/index.mdx
@@ -89,4 +89,4 @@ LarvixON rozwija szybki system diagnostyczny oparty na AI, który analizuje wzor
 
 ## Status projektu
 
-Projekt jest obecnie w fazie III: integracja i optymalizacja (październik 2025). Trwają prace nad połączeniem wszystkich komponentów systemu i optymalizacją modeli ML z użyciem rzeczywistych danych.
+Projekt jest obecnie w fazie III: integracja i optymalizacja. Trwają prace nad połączeniem wszystkich komponentów systemu i optymalizacją modeli ML z użyciem rzeczywistych danych.
