feat: seminar presentation

--- a/src/content/docs/en/university/overview.mdx
+++ b/src/content/docs/en/university/overview.mdx
@@ -11,6 +11,8 @@ Considering this is a university and a graded project, we had to create various 
 
 ## Links
 
+Links to documents according to chronological order
+
 <LinkCard
   title="Flashcard"
   href="/larvixon-documentation/en/university/documents/flashcard"
