--- a/src/content/docs/pl/university/overview.mdx
+++ b/src/content/docs/pl/university/overview.mdx
@@ -11,6 +11,8 @@ Jako iż jest to projekt studencki na ocenę, różne formy dokumentów były wy
 
 ## Linki
 
+Linki do dokumentów zgodnie z kolejnością chronologiczną
+
 <LinkCard
   title="Fiszka"
   href="/larvixon-documentation/pl/university/documents/flashcard"
