fix: spelling mistakes and no href

--- a/src/content/docs/en/university/overview.mdx
+++ b/src/content/docs/en/university/overview.mdx
@@ -19,6 +19,9 @@ Links to documents according to chronological order
 >
   The core of our project and deliverables timeline
 </LinkCard>
-<LinkCard title="Seminar presentation">
+<LinkCard
+  title="Seminar presentation"
+  href="/larvixon-documentation/en/university/documents/seminar-presentation"
+>
   Presentation that explained business and technical sides of LarvixON
 </LinkCard>
