--- a/src/content/docs/pl/university/overview.mdx
+++ b/src/content/docs/pl/university/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: Przegląd
-description: Spis wymaganych przez uczelnię dokuemntów do projektu LarvixON
+description: Spis wymaganych przez uczelnię dokumentów do projektu LarvixON
 ---
 
 import { LinkCard } from "@astrojs/starlight/components";
@@ -17,8 +17,11 @@ Linki do dokumentów zgodnie z kolejnością chronologiczną
   title="Fiszka"
   href="/larvixon-documentation/pl/university/documents/flashcard"
 >
-  Opis najwazniejszych funkcjonalności i harmonogram realizacji
+  Opis najważniejszych funkcjonalności i harmonogram realizacji
 </LinkCard>
-<LinkCard title="Prezentacja na seminarium">
-  Presentacja, która opisała biznesowe i techniczne założenia projektu LarvixON
+<LinkCard
+  title="Prezentacja na seminarium"
+  href="/larvixon-documentation/en/university/documents/seminar-presentation"
+>
+  Prezentacja, która opisała biznesowe i techniczne założenia projektu LarvixON
 </LinkCard>
