feat: flashcard and "only Polish" tip

--- a/src/content/docs/en/university/documents/seminar-presentation.mdx
+++ b/src/content/docs/en/university/documents/seminar-presentation.mdx
@@ -3,7 +3,11 @@ title: Seminar presentation
 description: Presentation that explained business and technical sides of LarvixON
 ---
 
-[Check the presentation as PDF](/larvixon-documentation/seminar-presentation.pdf)
+import { Aside } from "@astrojs/starlight/components";
+
+<Aside type="tip">This document is only in Polish!</Aside>
+
+[Check/download document as PDF](/larvixon-documentation/seminar-presentation/seminar-presentation.pdf)
 
 ![slide 1](/larvixon-documentation/seminar-presentation/Slide1.jpg "Slide 1")
 ![slide 2](/larvixon-documentation/seminar-presentation/Slide2.jpg "Slide 2")
