--- a/src/content/docs/en/university/documents/flashcard.mdx
+++ b/src/content/docs/en/university/documents/flashcard.mdx
@@ -1,9 +1,13 @@
 ---
-title: Fiszka
-description: Fiszka przekonwertowana na markdown z oryginalnego formatu PDF.
+title: Flashcard
+description: TODO
 ---
 
-[Obejrzyj/pobierz dokument jako PDF](/larvixon-documentation/flashcard/flashcard.pdf)
+import { Aside } from "@astrojs/starlight/components";
+
+<Aside type="tip">This document is only in Polish!</Aside>
+
+[Check/download document as PDF](/larvixon-documentation/flashcard/flashcard.pdf)
 
 **Politechnika Wrocławska**
 
