docs: flashcard en description

--- a/src/content/docs/en/university/documents/flashcard.mdx
+++ b/src/content/docs/en/university/documents/flashcard.mdx
@@ -1,6 +1,6 @@
 ---
 title: Flashcard
-description: TODO
+description: Flashcard (only in Polish) converted to markdown from original PDF format.
 ---
 
 import { Aside } from "@astrojs/starlight/components";
