--- a/zpi-article/main.tex
+++ b/zpi-article/main.tex
@@ -1,44 +1,64 @@
-\documentclass[english,edition=2024]{zpiday}
+\documentclass[polish,edition=2025]{zpiday}
 %\documentclass[polish,edition=2024]{zpiday}
 
 \usepackage{lipsum}
 \title{LarvixON AI - fast diagnostic system for detecting drugs in blood samples}
 \acronym{LarvixON}
-\supervisor{Clever Guy}
-\members{First Member\orcid{0000-0000-0000-0000} \and Second Member}
+\supervisor{dr Natalia Piórkowska}
+\members{Mikołaj Kubś \and Krzysztof Kulka \and Martyna Łopianiak \and Patryk Łuszczek}
 \projectLogo{images/png2pdf.pdf}
 
 
 \begin{document}
 
-
 \maketitle
 
 \begin{abstract}
-    \lipsum[1]
+Krótkie (100-150 słów) streszczenie projektu. Powinno zawierać cel projektu, wyniki i ich znaczenie. Jest to skondensowana wersja raportu, pozwalająca innym szybko zrozumieć jego istotę
 \end{abstract}
 
 
-\section{First section}
-\lipsum[1-3]
-\subsection{A Subsection}
-\lipsum[1]
-\section{Second section}
-\lipsum[1-3]
+\section{Wstęp}
+Diagnostyka toksykologiczna oraz identyfikacja ksenebiotyków w osoczu pacjentów stanowią kluczowy element postępowania medycznego w przypadku zatruć, przedawkowań leków oraz ekspozycji na substancje o nieznanym działaniu. Standardowe metody laboratoryjne charakteryzują się wysoką czułością, lecz wymagają specjalistycznej aparatury i długiego czasu analizy, co czyni je mało przydatnymi w sytuacjach nagłych. W konsekwencji istnieje potrzeba opracowania motod szybkiej, wsepnej diagnostyki, które pozwolą lekarzowi wstępnie ocenić obecność substancji toksycznych bez konieczności oczekiwania na wyniki badań laboratoryjnych.
 
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=0.5\linewidth]{images/ZPI-Day-cmyk.pdf}
-    \caption{To jest obrazek}
-    \label{fig:zpi-day}
-\end{figure}
+Projekt LarvixON odpowiada na tę potrzebę poprzez wykorzystanie nietypowego, lecz obiecującego modelu biologicznego - larw Galleria mellonella. Organizm ten jest szeroko stosowany w toksykologii i badaniach nad odpornością dzięki swojej wrażliwości na patogeny, substancje toksyczne oraz wyraźne, mierzalne zmiany behawioralne w odpowiedzi na bodźce. Zmiany w motoryce larw mogą odzwierciedlać obecność substancji bioaktywnych w próbce, co stanowi podstawę koncepcji szybkiej diagnostyki opartej na analizie ruchu.
 
-\begin{itemize}
-    \item First item \cite{lamport1994}.
-    \item Second item \cite{rowling1997}.
-    \item Third item.
-\end{itemize}
+Głównym celem projektu jest stworzenie zautomatyzowanego systemu diagnostycznego opartego na sztucznej inteligencji, zdolnego do klasyfikacji próbek osocza na podstawie analizy ruchowych wzorców zachowania larw. Zakłada się osiągnięcie wysokiej czułości i specyficzności klasyfikacji przy całkowitym czasie analizy nieprzekraczającym 20 minut, co pozwoli na wykorzystanie systemu jako narzędzia wspomagającego podejmowanie decyzji klinicznych. Projekt łączy cele badawcze - zrozumienie i modelowanie behawioralnej reakcji larw na różne ksenobiotyki - z celami inżynierskimi, obejmującymi stworzenie kompletnej aplikacji diagnostycznej integrującej cały proces analizy.
 
+Zakładane korzyści obejmują skrócenie czasu diagnozy, poprawę skuteczności leczenia pacjentów w stanach nagłych oraz stworzenie podstaw do wdrożenia metody jako szybkiego testu przesiewowego w lecznictwie szpitalnym i ambulatoryjnym.
+
+\section{Prace związane z tematem}
+
+Dotychczasowe metody wykrywania ksenobiotyków koncentrują się na analizie chemicznej, która - choć precyzyjna - wymaga czasochłonnych procedur i zaawansowanej aparatury. W ostatnich latach obserwuje się jednak wzrost zainteresowania metodami wykorzystującymi modele biologiczne oraz algorytmy sztucznej inteligencji do pośredniej detekcji substancji toksycznych. Larwy Galleria mellonella są coraz częściej stosowane w badaniach toksykologicznych ze względu na ich niski koszt, krótki czas reakcji oraz fizjologiczne podobieństwa do odpowiedzi immunologicznej ssaków. Ich reakcje behawioralne - w szczególności aktywność ruchowa - można w sposób ilościowy analizować za pomocą systemów wizyjnych, co stwarza dogodny punkt wyjścia do automatyzacji diagnostyki.
+
+W literaturze dostępne są prace opisujące systemy śledzenia ruchu owadów oraz wykorzystanie cech behawioralnych do oceny toksyczności środowiskowej lub działania leków. Jednak brak jest rozwiązań komercyjnych, które integrowałyby model biologiczny z algorytmami uczenia maszynowego w celu szybkiej diagnostyki klinicznej. Istniejące systemy często wymagają długiej rejestracji danych lub ograniczają się do analizy pojedynczych parametrów ruchowych, co zmniejsza ich skuteczność w kontekście wykrywania złożonych reakcji na ksenobiotyki.
+
+Projekt LarvixON wprowadza innowacyjne podejście polegające na połączeniu algorytmów komputerowego przetwarzania obrazu, ekstrakcji cech czasowo-przestrzennych oraz modeli uczenia maszynowego, które klasyfikują próbki na podstawie subtelnych wzorców motorycznych. Jednym z kluczowych wyzwań jest opracowanie efektywnego pipeline’u analitycznego, który poradzi sobie z różnorodnością danych biologicznych, zmiennością zachowań larw oraz ograniczoną ilością próbek treningowych.
+
+W trakcie projektu konieczne było podjęcie decyzji dotyczących wyboru technologii, systemu śledzenia ruchu, metody ekstrakcji cech oraz architektury modelu klasyfikacyjnego. Ważnym ograniczeniem było także zapewnienie krótkiego czasu przetwarzania, co wymusiło optymalizację algorytmów pod kątem szybkości działania. Równolegle rozwijany był interfejs użytkownika, umożliwiający płynne przechodzenie od załadowania nagrania do uzyskania wyniku klasyfikacji.
+
+Połączenie badań nad algorytmami z pracami inżynierskimi nad aplikacją ma doprowadzić do stworzenia kompletnego systemu gotowego do oceny w rzeczywistych warunkach klinicznych.
+
+\section{Wyniki}
+
+    Jest to najważniejsza sekcja Waszego artykułu. Podajcie szczegółowy opis osiągniętych wyników w projekcie:
+        Jakie funkcjonalności zostały zaimplementowane?
+        Jakie cele biznesowe lub techniczne zostały osiągnięte?
+        Dołączcie dane lub metryki pokazujące silne strony projektu (np. wydajność, oszczędności, wyniki testów).
+    Jeśli dotyczy, omówcie praktyczne zastosowanie Waszego projektu, jego implementację lub potencjalne korzyści dla użytkowników.
+
+\section{Wnioski}
+
+    Podsumujcie wyniki, które osiągnęliście, oraz ich znaczenie dla docelowej grupy odbiorców (biznesowych lub technicznych).
+    Wskażcie najważniejszy sukces projektu.
+
+\section{Kierunki rozwoju}
+
+    Zaproponujcie możliwe kierunki rozwoju projektu w przyszłości.
+    Rozważcie, jakie dodatkowe funkcje mogłyby zostać dodane, lub jak projekt mógłby zostać ulepszony lub rozszerzony.
+
+\section{Podziękowania}
+Krótkie podziękowanie dla osób lub organizacji, które wspierały Twój projekt.
 
 \bibliographystyle{plain}
 \bibliography{references}
