--- a/zpi-article/main.tex
+++ b/zpi-article/main.tex
@@ -14,12 +14,12 @@
 \maketitle
 
 \begin{abstract}
-Krótkie (100-150 słów) streszczenie projektu. Powinno zawierać cel projektu, wyniki i ich znaczenie. Jest to skondensowana wersja raportu, pozwalająca innym szybko zrozumieć jego istotę
+    Krótkie (100-150 słów) streszczenie projektu. Powinno zawierać cel projektu, wyniki i ich znaczenie. Jest to skondensowana wersja raportu, pozwalająca innym szybko zrozumieć jego istotę
 \end{abstract}
 
 
 \section{Wstęp}
-Diagnostyka toksykologiczna oraz identyfikacja ksenebiotyków w osoczu pacjentów stanowią kluczowy element postępowania medycznego w przypadku zatruć, przedawkowań leków oraz ekspozycji na substancje o nieznanym działaniu. Standardowe metody laboratoryjne charakteryzują się wysoką czułością, lecz wymagają specjalistycznej aparatury i długiego czasu analizy, co czyni je mało przydatnymi w sytuacjach nagłych. W konsekwencji istnieje potrzeba opracowania motod szybkiej, wsepnej diagnostyki, które pozwolą lekarzowi wstępnie ocenić obecność substancji toksycznych bez konieczności oczekiwania na wyniki badań laboratoryjnych.
+Diagnostyka toksykologiczna oraz identyfikacja ksenebiotyków w osoczu pacjentów stanowią kluczowy element postępowania medycznego w przypadku zatruć, przedawkowań leków oraz ekspozycji na substancje o nieznanym działaniu. Standardowe metody laboratoryjne charakteryzują się wysoką czułością, lecz wymagają specjalistycznej aparatury i długiego czasu analizy, co czyni je mało przydatnymi w sytuacjach nagłych. W konsekwencji istnieje potrzeba opracowania metod szybkiej diagnostyki, które pozwolą lekarzowi wstępnie ocenić obecność substancji toksycznych bez konieczności oczekiwania na wyniki badań laboratoryjnych.
 
 Projekt LarvixON odpowiada na tę potrzebę poprzez wykorzystanie nietypowego, lecz obiecującego modelu biologicznego - larw Galleria mellonella. Organizm ten jest szeroko stosowany w toksykologii i badaniach nad odpornością dzięki swojej wrażliwości na patogeny, substancje toksyczne oraz wyraźne, mierzalne zmiany behawioralne w odpowiedzi na bodźce. Zmiany w motoryce larw mogą odzwierciedlać obecność substancji bioaktywnych w próbce, co stanowi podstawę koncepcji szybkiej diagnostyki opartej na analizie ruchu.
 
@@ -33,35 +33,36 @@ Dotychczasowe metody wykrywania ksenobiotyków koncentrują się na analizie che
 
 W literaturze dostępne są prace opisujące systemy śledzenia ruchu owadów oraz wykorzystanie cech behawioralnych do oceny toksyczności środowiskowej lub działania leków. Jednak brak jest rozwiązań komercyjnych, które integrowałyby model biologiczny z algorytmami uczenia maszynowego w celu szybkiej diagnostyki klinicznej. Istniejące systemy często wymagają długiej rejestracji danych lub ograniczają się do analizy pojedynczych parametrów ruchowych, co zmniejsza ich skuteczność w kontekście wykrywania złożonych reakcji na ksenobiotyki.
 
-Projekt LarvixON wprowadza innowacyjne podejście polegające na połączeniu algorytmów komputerowego przetwarzania obrazu, ekstrakcji cech czasowo-przestrzennych oraz modeli uczenia maszynowego, które klasyfikują próbki na podstawie subtelnych wzorców motorycznych. Jednym z kluczowych wyzwań jest opracowanie efektywnego pipeline’u analitycznego, który poradzi sobie z różnorodnością danych biologicznych, zmiennością zachowań larw oraz ograniczoną ilością próbek treningowych.
+Projekt LarvixON wprowadza innowacyjne podejście polegające na połączeniu algorytmów komputerowego przetwarzania obrazu, ekstrakcji cech czasowo-przestrzennych oraz modeli uczenia maszynowego, które klasyfikują próbki na podstawie subtelnych wzorców motorycznych. Jednym z kluczowych wyzwań jest opracowanie efektywnego pipeline'u analitycznego, który poradzi sobie z różnorodnością danych biologicznych, zmiennością zachowań larw oraz ograniczoną ilością próbek treningowych.
 
+    [MK]To powinno być tutaj?
 W trakcie projektu konieczne było podjęcie decyzji dotyczących wyboru technologii, systemu śledzenia ruchu, metody ekstrakcji cech oraz architektury modelu klasyfikacyjnego. Ważnym ograniczeniem było także zapewnienie krótkiego czasu przetwarzania, co wymusiło optymalizację algorytmów pod kątem szybkości działania. Równolegle rozwijany był interfejs użytkownika, umożliwiający płynne przechodzenie od załadowania nagrania do uzyskania wyniku klasyfikacji.
 
 Połączenie badań nad algorytmami z pracami inżynierskimi nad aplikacją ma doprowadzić do stworzenia kompletnego systemu gotowego do oceny w rzeczywistych warunkach klinicznych.
+    [/MK]
 
 \section{Wyniki}
 
-    Jest to najważniejsza sekcja Waszego artykułu. Podajcie szczegółowy opis osiągniętych wyników w projekcie:
-        Jakie funkcjonalności zostały zaimplementowane?
-        Jakie cele biznesowe lub techniczne zostały osiągnięte?
-        Dołączcie dane lub metryki pokazujące silne strony projektu (np. wydajność, oszczędności, wyniki testów).
-    Jeśli dotyczy, omówcie praktyczne zastosowanie Waszego projektu, jego implementację lub potencjalne korzyści dla użytkowników.
+Jest to najważniejsza sekcja Waszego artykułu. Podajcie szczegółowy opis osiągniętych wyników w projekcie:
+Jakie funkcjonalności zostały zaimplementowane?
+Jakie cele biznesowe lub techniczne zostały osiągnięte?
+Dołączcie dane lub metryki pokazujące silne strony projektu (np. wydajność, oszczędności, wyniki testów).
+Jeśli dotyczy, omówcie praktyczne zastosowanie Waszego projektu, jego implementację lub potencjalne korzyści dla użytkowników.
 
 \section{Wnioski}
 
-    Podsumujcie wyniki, które osiągnęliście, oraz ich znaczenie dla docelowej grupy odbiorców (biznesowych lub technicznych).
-    Wskażcie najważniejszy sukces projektu.
+Podsumujcie wyniki, które osiągnęliście, oraz ich znaczenie dla docelowej grupy odbiorców (biznesowych lub technicznych).
+Wskażcie najważniejszy sukces projektu.
 
 \section{Kierunki rozwoju}
 
-    Zaproponujcie możliwe kierunki rozwoju projektu w przyszłości.
-    Rozważcie, jakie dodatkowe funkcje mogłyby zostać dodane, lub jak projekt mógłby zostać ulepszony lub rozszerzony.
+Zaproponujcie możliwe kierunki rozwoju projektu w przyszłości.
+Rozważcie, jakie dodatkowe funkcje mogłyby zostać dodane, lub jak projekt mógłby zostać ulepszony lub rozszerzony.
 
 \section{Podziękowania}
 Krótkie podziękowanie dla osób lub organizacji, które wspierały Twój projekt.
 
 \bibliographystyle{plain}
 \bibliography{references}
-
 
 \end{document}
