docs: gratitude section

--- a/zpi-article/main.tex
+++ b/zpi-article/main.tex
@@ -41,6 +41,10 @@ W trakcie projektu konieczne było podjęcie decyzji dotyczących wyboru technol
 Połączenie badań nad algorytmami z pracami inżynierskimi nad aplikacją ma doprowadzić do stworzenia kompletnego systemu gotowego do oceny w rzeczywistych warunkach klinicznych.
     [/MK]
 
+    [MK]
+A po drugie, trzeba będzie zerknąć na to co kiedyś kminiliśmy z Piórkowską i zacytować te prace.
+    [/MK]
+
 \section{Wyniki}
 
 Jest to najważniejsza sekcja Waszego artykułu. Podajcie szczegółowy opis osiągniętych wyników w projekcie:
@@ -60,7 +64,12 @@ Zaproponujcie możliwe kierunki rozwoju projektu w przyszłości.
 Rozważcie, jakie dodatkowe funkcje mogłyby zostać dodane, lub jak projekt mógłby zostać ulepszony lub rozszerzony.
 
 \section{Podziękowania}
-Krótkie podziękowanie dla osób lub organizacji, które wspierały Twój projekt.
+Chcielibyśmy wyrazić swoją wdzięczność:
+\begin{itemize}
+    \item Naszej opiekun ZPI dr inż. Natalii Piórkowskiej za zarządzanie naszą pracą
+    \item \href{https://www.umw.edu.pl}{Uniwersytetowi Medycznemu we Wrocławiu} za udostępnienie danych do trenowania modeli
+    \item \href{https://www.wcss.pl}{Wrocławskiemu Centrum Sieciowo-Superkomputerowemu} za udostępnienie sprzętu do trenowania modeli
+\end{itemize}
 
 \bibliographystyle{plain}
 \bibliography{references}
