--- a/src/content/docs/pl/index.mdx
+++ b/src/content/docs/pl/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: LarvixON - dokumentacja projektu
-description: Szybki system diagnostyczny toksyczności plazmy wykorzystujący analizę behawioralną larw i algorytmy uczenia maszynowego
+description: diagnostyka toksyczności osocza z wykorzystaniem analizy behawioralnej larw
 ---
 
 import {
