feat: integrated seminar presentations

--- a/src/content/docs/en/university/documents/seminar-presentation.mdx
+++ b/src/content/docs/en/university/documents/seminar-presentation.mdx
@@ -1,5 +1,5 @@
 ---
-title: Seminar presentation
+title: First seminar presentation - idea
 description: Presentation that explained business and technical sides of LarvixON
 ---
 
