feat: sections completed

--- a/src/content/docs/pl/project/requirements/specifications.mdx
+++ b/src/content/docs/pl/project/requirements/specifications.mdx
@@ -26,7 +26,7 @@ Poniżej przedstawiono listę wymagań funkcjonalnych pogrupowanych w Epiki, zde
 
 1.  **US-3.1** Jako użytkownik chcę wysłać wiadomość do zespołu, aby zadać pytanie dotyczące systemu.
 
-![Diagram kontekstu systemowego (warstwa C1 modelu architektury C4)](../../../../assets/larvixon-SystemContext.png)
+![Diagram kontekstu systemowego (warstwa C1 modelu architektury C4)](../../../../../assets/images-backend/larvixon-SystemContext.png)
 _Diagram kontekstu systemowego (warstwa C1 modelu architektury C4)_
 
 ## Wymagania niefunkcjonalne
