--- a/src/content/docs/en/project/requirements/specifications.mdx
+++ b/src/content/docs/en/project/requirements/specifications.mdx
@@ -26,7 +26,7 @@ Below is a list of functional requirements grouped into Epics, defined in the fo
 
 1.  **US-3.1** As a user, I want to send a message to the team to ask a question regarding the system.
 
-![System Context Diagram (C1 layer of C4 model)](../../../../assets/larvixon-SystemContext.png)
+![System Context Diagram (C1 layer of C4 model)](../../../../../assets/images-backend/larvixon-SystemContext.png)
 _System Context Diagram (C1 layer of C4 model)_
 
 ## Non-Functional Requirements
