feat: name folders nicely with proper ordering

--- a/src/content/docs/en/index.mdx
+++ b/src/content/docs/en/index.mdx
@@ -25,28 +25,38 @@ LarvixON is an innovative diagnostic solution that uses artificial intelligence 
   with an analysis time not exceeding 20 minutes.
 </Aside>
 
-## Quick start
+## Quick Start
 
 <CardGrid>
   <LinkCard
-    title="Project overview"
-    href="project/overview/"
-    description="Read the project goals and scope"
+    title="1. Introduction"
+    href="01-project/01-introduction/goals-and-scope/"
+    description="Project goals, scope and state of knowledge"
   />
   <LinkCard
-    title="Technologies"
-    href="project/technologies/"
-    description="Technology stack and tools"
+    title="2. Requirements"
+    href="01-project/02-requirements/assumptions/"
+    description="Preliminary assumptions and specifications"
   />
   <LinkCard
-    title="Project roadmap"
-    href="project/roadmap/"
-    description="Project plan and milestones"
+    title="3. Architecture"
+    href="01-project/03-architecture/system-design/"
+    description="System design and database schema"
   />
   <LinkCard
-    title="Project team"
-    href="project/team/"
-    description="Team members and supervisor"
+    title="4. Implementation"
+    href="01-project/04-implementation/backend/"
+    description="Technical implementation details"
+  />
+  <LinkCard
+    title="5. Results"
+    href="01-project/05-results/demonstration/"
+    description="Project outcomes and demonstrations"
+  />
+  <LinkCard
+    title="University Docs"
+    href="02-university/overview/"
+    description="Academic documentation and presentations"
   />
 </CardGrid>
 
@@ -87,3 +97,20 @@ LarvixON develops a rapid diagnostic system based on AI that analyzes larval mov
 ## Project status
 
 The project is currently in phase III: integration and optimization. Work is ongoing to connect all system components and optimize ML models with real data.
+
+## GitHub Resources
+
+Below are links to all LarvixON system elements hosted on the GitHub platform.
+
+### Code Repositories
+
+- [larvixon-backend](https://github.com/LarvixON-ZPI/larvixon-backend) - Server logic (Django)
+- [larvixon-frontend](https://github.com/LarvixON-ZPI/larvixon-frontend) - Client application (Flutter)
+- [larvixon-model](https://github.com/LarvixON-ZPI/larvixon-model) - Machine Learning Model (PyTorch)
+- [larvixon-patients-service](https://github.com/LarvixON-ZPI/larvixon-patients-service) - Patient data microservice
+- [larvixon-simulation](https://github.com/LarvixON-ZPI/larvixon-simulation) - Unity simulation for data generation
+- [larvixon-documentation](https://github.com/LarvixON-ZPI/larvixon-documentation) - Source code for this documentation
+
+### Project Management
+
+- [GitHub Projects Board](https://github.com/orgs/LarvixON-ZPI/projects/1/views/1?filterQuery=) - Kanban board with tasks and progress
