--- a/src/content/docs/pl/index.mdx
+++ b/src/content/docs/pl/index.mdx
@@ -94,12 +94,12 @@ LarvixON rozwija szybki system diagnostyczny oparty na AI, który analizuje wzor
 - Wrocławskie Centrum Sieciowo-Superkomputerowe (WCSS) – moc obliczeniowa dla ML
 - PostgreSQL – baza danych systemu
 - Docker – konteneryzacja
-- TODO – hosting i usługi chmurowe
+- Azure – hosting i usługi chmurowe
 - Roboflow – adnotacje danych wideo
 
 ## Status projektu
 
-Projekt jest obecnie w fazie III: integracja i optymalizacja. Trwają prace nad połączeniem wszystkich komponentów systemu i optymalizacją modeli ML z użyciem rzeczywistych danych.
+Projekt został oficjalnie ukończony i oddany do oceny. Osiągnął 4. miejsce na 33 projekty według rankingu publiczności!
 
 ## Zasoby GitHub
 
